--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,24 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+ANDROID_BUILD_SDK_VERSION=25
+ANDROID_BUILD_TOOLS_VERSION=25.0.0
+ANDROID_BUILD_TARGET_SDK_VERSION=25
+ANDROID_BUILD_MIN_SDK_VERSION=14
+
+APP_VERSION_NAME = 1.0.9
+APP_VERSION_CODE = 10
+
+ANDROID_SUPPORT_LIBRARY_VERSION = 25.0.0
+
+# Deps for gradle
+BUILD\_TOOLS\_VERSION=23.0.2
+COMPILE\_SDK\_VERSION=23
+# Deps for libraries
+JUNIT\_VERSION=4.12
+MOCKITO\_CORE\_VERSION=1.10.19
+ROBOLECTRIC\_VERSION=3.0
+NINEOLDANDROID\_VERSION=2.4.0
+SUPPORT\_LIB\_VERSION=23.2.1
+JSR\_305\_VERSION=3.0.0
