--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,8 +24,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    testCompile 'junit:junit:4.12'
     compile files('libs/super-helper-master-1.0.6.jar')
     compile project(path: ':bottom-navigation-bar')
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-v4:25.1.0'
+    testCompile 'junit:junit:4.12'
+    compile project(':mytoollibrary')
 }
